--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -14,6 +14,5 @@ jobs:
           python-version: 3.7 # optional, default is 3.x
           # The target architecture (x86, x64) of the Python interpreter.
           architecture: x64 # optional, default is x64
-      - name: Black Code Formatter
-        uses: lgeiger/black-action@v1.0.1
-        args: ". --check"
+      - name: Black Check
+        uses: jpetrucciani/black-check@19.10b0
