--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -14,6 +14,12 @@ jobs:
           python-version: 3.7 # optional, default is 3.x
           # The target architecture (x86, x64) of the Python interpreter.
           architecture: x64 # optional, default is x64
+      - name: ls
+        run: pwd
+        shell: bash
+      - name: Display the path
+        run: echo $PATH
+        shell: bash
       - name: Black Code Formatter
         uses: lgeiger/black-action@v1.0.1
         with:
