--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -24,4 +24,4 @@ jobs:
         uses: lgeiger/black-action@v1.0.1
         working-directory: /home/runner/work/ikea-scraper/ikea-scraper
         with:
-          args: ". --check
+          args: ". --check"
